# ez-cdc

./: README.md  docker-compose.yml
debezium/: customers_conf.json
postgres/: init.sql
python/: Dockerfile  pyproject.toml
python/cdc_test/: main.py
